<resources>
    <string name="app_name">TwoTrails</string>
    <string name="str_ok">OK</string>
    <string name="str_delete">Delete</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_move">Move</string>
    <string name="str_new">New</string>
    <string name="str_edit">Edit</string>
    <string name="str_exit">Exit</string>
    <string name="str_remove">Remove</string>
    <string name="str_unlock">Unlock</string>
    <string name="str_lock">Lock</string>
    <string name="str_internal">Internal</string>
    <string name="str_external">External</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_invalid">Invalid Input</string>
    <string name="str_link">Linked</string>
    <string name="str_create">Create</string>
    <string name="str_empty"> </string>
    <string name="str_nullvalue">*</string>
    <string name="str_view">View</string>
    <string name="str_fullscreen">View in Gallery</string>
    <string name="str_onbnd">On Boundary</string>
    <string name="str_offbnd">Off Boundary</string>
    <string name="str_onbnd_abv">ON BND</string>
    <string name="str_offbnd_abv">OFF BND</string>
    <string name="str_op_type">Operation Type</string>
    <string name="str_vib">Vibrate On Create</string>
    <string name="str_vib_on">Vibration On</string>
    <string name="str_vib_off">Vibration Off</string>
    <string name="str_ring">Ring On Create</string>
    <string name="str_ring_on">Ring On</string>
    <string name="str_ring_off">Ring Off</string>
    <string name="str_poly_adjusting">Polygons Adjusting</string>
    <string name="str_finish">Finish</string>
    <string name="str_pause">Pause</string>
    <string name="str_map">Map</string>
    <string name="str_convert">Convert</string>
    <string name="str_acquire">Acquire</string>
    <string name="str_pid">Point ID</string>
    <string name="str_deg">Degrees</string>
    <string name="str_minuntes">Minutes</string>
    <string name="str_sec">Seconds</string>
    <string name="str_decdeg">DD</string>
    <string name="str_dms">DMS</string>
    <string name="str_lat">Latitude</string>
    <string name="str_lon">Longitude</string>
    <string name="str_polygons">Polygons</string>
    <string name="str_polygon">Polygon</string>
    <string name="str_group">Group</string>
    <string name="str_groups">Groups</string>
    <string name="str_meta">Metadata</string>
    <string name="str_project">Project</string>
    <string name="str_points">Points</string>
    <string name="str_point">Point</string>
    <string name="str_nmea">NMEA</string>
    <string name="str_kmz">KMZ</string>
    <string name="str_gpx">GPX</string>
    <string name="str_summary">Summary</string>
    <string name="str_vis">Visible</string>
    <string name="str_navigate">Navigate</string>
    <string name="str_navigation">Navigation</string>
    <string name="str_zone">Zone</string>
    <string name="str_utmx">UTM X</string>
    <string name="str_utmy">UTM Y</string>
    <string name="str_elev">Elevation</string>
    <string name="str_dec">Declination</string>
    <string name="str_pdop">PDOP</string>
    <string name="str_hdop">HDOP</string>
    <string name="str_gps_stat">GPS Status</string>
    <string name="str_my_loc">My Location</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_dist">Distance</string>
    <string name="str_az">Azimuth</string>
    <string name="str_slp">Slope</string>
    <string name="str_ang">Angle</string>
    <string name="str_mag">Magnetic</string>
    <string name="str_true">True</string>
    <string name="str_false">False</string>
    <string name="str_open">Open</string>
    <string name="str_close">Close</string>
    <string name="str_rename">Rename</string>
    <string name="str_overwrite">Overwrite</string>
    <string name="str_settings">Settings</string>
    <string name="str_listen_recv">Listening to Receiver</string>
    <string name="str_satellites">Satellites</string>
    <string name="str_mode">Mode</string>
    <string name="str_online_map">Online Map</string>
    <string name="str_offline_map">Offline Map</string>
    <string name="str_name">Name</string>
    <string name="str_location">Location</string>
    <string name="str_url">Url</string>
    <string name="str_file">File</string>
    <string name="str_file_name">File Name</string>
    <string name="str_prj_name">Project Name</string>
    <string name="str_desc">Description</string>
    <string name="str_world_map">World Map</string>
    <string name="str_details">View Details</string>
    <string name="str_min">Min</string>
    <string name="str_max">Max</string>
    <string name="str_reset">Reset</string>
    <string name="str_ft">FT</string>
    <string name="str_mt">Mt</string>
    <string name="str_ac">Ac</string>
    <string name="str_ha">Ha</string>
    <string name="str_perim">Perimeter</string>
    <string name="str_perim_line">Perimeter Line</string>
    <string name="str_area">Area</string>
    <string name="str_calc">Calculate</string>
    <string name="str_bnd">Boundary</string>
    <string name="str_other">Other</string>
    <string name="str_cmt">Comment</string>
    <string name="str_help">Help</string>
    <string name="str_select_file">Select File</string>
    <string name="str_tilt">Tilt</string>
    <string name="str_index">Index</string>
    <string name="str_cn">CN</string>
    <string name="str_test">Test</string>
    <string name="str_mag_dec">Mag Dec</string>
    <string name="str_img_info">Media Info</string>
    <string name="zero">0</string>
    <string name="str_x">X</string>
    <string name="str_y">Y</string>
    <string name="str_z">Z</string>
    <string name="op_gps">GPS</string>
    <string name="op_take5">Take 5</string>
    <string name="op_walk">Walk</string>
    <string name="op_way">Way Point</string>
    <string name="op_trav">Traverse</string>
    <string name="op_ss">Sideshot</string>
    <string name="op_qndm">Quondam</string>
    <string name="meas_feet">Feet</string>
    <string name="meas_meters">Meters</string>
    <string name="menu_main_about">About</string>
    <string name="menu_x_gps_settings">GPS Setup</string>
    <string name="menu_x_range_finder_settings">Range Finder</string>
    <string name="menu_x_filter">Filter</string>
    <string name="menu_x_device_setup">Device Setup</string>
    <string name="menu_x_point_settings">Point Settings</string>
    <string name="menu_poly_reset">Reset Polygon</string>
    <string name="menu_poly_delete">Delete Polygon</string>
    <string name="menu_poly_goto">Go To Polygon</string>
    <string name="menu_poly_adjust">Adjust Polygons</string>
    <string name="menu_meta_reset">Reset Metadata</string>
    <string name="menu_meta_delete">Delete Metadata</string>
    <string name="menu_meta_default">Set as Default</string>
    <string name="menu_points_setup_filter">Setup Filter</string>
    <string name="menu_points_convert_quondam">Convert Quondam</string>
    <string name="menu_points_change_polygon">Change Polygon</string>
    <string name="menu_points_setup_gps">GPS Setting</string>
    <string name="menu_points_jump">Jump To Point</string>
    <string name="menu_points_move">Move Point</string>
    <string name="menu_points_enter_latlon">Enter Lat/Lon</string>
    <string name="menu_points_recalc">Recalc NMEA</string>
    <string name="menu_points_reset">Reset Point</string>
    <string name="menu_points_delete">Delete Point</string>
    <string name="menu_take5_cmt">Comment</string>
    <string name="menu_take5_bnc">On Bnd</string>
    <string name="menu_take5_settings">Take 5 Settings</string>
    <string name="menu_take5_map_mode">Map Mode</string>
    <string name="menu_take5_add_media">Add Media</string>
    <string name="menu_take5_goto_bottom">Go To Last Point</string>
    <string name="menu_walk_settings">Walk Settings</string>
    <string name="menu_walk_walking">Walking</string>
    <string name="menu_walk_map_mode">Map Mode</string>
    <string name="menu_rename_group">Rename Group</string>
    <string name="menu_map_select_type">Select Map</string>
    <string name="menu_map_settings">Map Settings</string>
    <string name="menu_map_reset_bnds">Reset Bounds</string>
    <string name="menu_map_move_to_max_extents">Move To Map Bounds</string>
    <string name="menu_map_where_is">Where Is</string>
    <string name="menu_map_show_my_pos">Show My Position</string>
    <string name="menu_map_zoom_to_poly">Zoom To Polygon</string>
    <string name="menu_walk_show_all_points">Show All Points</string>
    <string name="ds_gps_not_connected">GPS Not Connected</string>
    <string name="ds_gps_check_nmea">See what NMEA strings are coming down from the GPS receiver</string>
    <string name="set_GPS_CAT">exGpsCat</string>
    <string name="set_GPS_CHECK">prefGpsCheck</string>
    <string name="set_GPS_LIST_DEVICE">prefLstGpsDevice</string>
    <string name="set_GPS_CHECK_NMEA">prefGpsCheckNema</string>
    <string name="set_RF_SETUP">rfSetup</string>
    <string name="set_RF_LIST_DEVICE">rfLocDevice</string>
    <string name="set_DROP">prefDropZero</string>
    <string name="set_CLEAR_LOG">prefClearLog</string>
    <string name="set_EXPORT_REPORT">prefExportReport</string>
    <string name="set_RESET">prefResetDevice</string>
    <string name="set_CODE">prefEnterCode</string>
    <string name="set_settings_page">settings_page</string>
    <string name="set_GPS_EXTERNAL">GpsExternal</string>
    <string name="set_GPS_ALWAYS_ON">GpsAlwaysOn</string>
    <string name="set_GPS_FILTER_DOP_TYPE">GpsFilterDopType</string>
    <string name="set_GPS_FILTER_DOP_VALUE">GpsFilterDopValue</string>
    <string name="set_GPS_FILTER_FIX">GpsFilterFix</string>
    <string name="set_GPS_FILTER_FIX_TYPE">GpsFilterFixType</string>
    <string name="set_TAKE5_FILTER_DOP_TYPE">Take5FilterDopType</string>
    <string name="set_TAKE5_FILTER_DOP_VALUE">Take5FilterDopValue</string>
    <string name="set_TAKE5_FILTER_FIX">Take5FilterFix</string>
    <string name="set_TAKE5_FILTER_FIX_TYPE">Take5FilterFixType</string>
    <string name="set_TAKE5_NMEA_AMOUNT">Take5NmeaAmount</string>
    <string name="set_TAKE5_IGNORE_NMEA">Take5IgnoreNmea</string>
    <string name="set_TAKE5_IGNORE_NMEA_AMOUNT">Take5IgnoreNmeaAmount</string>
    <string name="set_TAKE5_FAIL_AMOUNT">Take5FailAmount</string>
    <string name="set_TAKE5_INCREMENT">Take5Increment</string>
    <string name="set_TAKE5_VIB_ON_CREATE_POINT">Take5VibrationOnCreate</string>
    <string name="set_TAKE5_RING_ON_CREATE_POINT">Take5RingOnCreate</string>
    <string name="set_WALK_FILTER_DOP_TYPE">WalkFilterDopType</string>
    <string name="set_WALK_FILTER_DOP_VALUE">WalkFilterDopValue</string>
    <string name="set_WALK_FILTER_FIX">WalkFilterFix</string>
    <string name="set_WALK_FILTER_FIX_TYPE">WalkFilterFixType</string>
    <string name="set_WALK_FILTER_ACCURACY">WalkFilterAccuracy</string>
    <string name="set_WALK_FILTER_FREQUENCY">WalkFilterFrequency</string>
    <string name="set_WALK_INCREMENT">WalkIncrement</string>
    <string name="set_WALK_VIB_ON_CREATE_POINT">WalkVibrationOnCreate</string>
    <string name="set_WALK_RING_ON_CREATE_POINT">WalkRingOnCreate</string>
    <string name="set_AUTO_UPDATE_WALK_ONBND_ASK">AutoUpdateWalkOnBndAsk</string>
    <string name="set_AUTO_SET_GPS_NAME_TO_META_ASK">AutoSetGpsNameToMetaAsk</string>
    <string name="set_AUTO_OPEN_LAST_PROJECT">AutoOpenLastProject</string>
    <string name="set_MAP_TRACKING_OPTION">MapTrackingOption</string>
    <string name="set_MAP_COMPASS_ENABLED">MapCompassEnabled</string>
    <string name="set_MAP_MY_POS_BUTTON">MapMyPosButton</string>
    <string name="set_MAP_SHOW_MY_POS">MapShowMyPos</string>
    <string name="set_MAP_USE_UTM_NAV">MapUseUtmNav</string>
    <string name="amd_update_path">Update File Path</string>
    <string name="amd_update_details">Update Map Details</string>
</resources>