<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        android:title="Device Setup"
        android:key="devSetup">

        <PreferenceScreen
            android:title="@string/menu_x_gps_settings"
            android:key="gpsSetup">

            <SwitchPreferenceCompat
                android:key="@string/set_GPS_EXTERNAL"
                android:title="GPS Device"
                android:summary="Device to use."
                android:switchTextOff="@string/str_internal"
                android:switchTextOn="@string/str_external"
                android:textOff="@string/str_internal"
                android:textOn="@string/str_external"/>

            <SwitchPreferenceCompat
                android:key="@string/set_GPS_ALWAYS_ON"
                android:title="Keep GPS ON"
                android:summary="Run GPS Always"/>

            <Preference
                android:key="@string/set_GPS_CHECK_NMEA"
                android:title="Check NMEA"
                android:summary="@string/ds_gps_check_nmea"/>

            <PreferenceCategory
                android:title="External GPS Settings"
                android:key="@string/set_GPS_CAT">

                <com.usda.fmsc.android.preferences.ListCompatPreference
                    android:id="@+id/prefLstGpsDevice"
                    android:key="@string/set_GPS_LIST_DEVICE"
                    android:title="External GPS Device"
                    android:summary="Device: "/>

                <Preference
                    android:key="@string/set_GPS_CHECK"
                    android:title="Check GPS Connection"
                    android:summary="@string/ds_gps_not_connected"/>

                <SwitchPreferenceCompat
                    android:title="Update Metadata on GPS"
                    android:key="@string/set_AUTO_SET_GPS_NAME_TO_META_ASK"
                    android:summary="Remember option to update metadata on GPS receiver change"/>
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="Range Finder"
            android:key="@string/set_RF_SETUP"
            android:enabled="true">

            <ListPreference
                android:id="@+id/prefLstRFDevice"
                android:key="@string/set_RF_LIST_DEVICE"
                android:title="External Range Finder" />

            <Preference
                android:key="@string/set_RF_CHECK"
                android:title="Check Range Finder Connection"
                android:summary="@string/ds_rf_not_connected"/>


            <!--Create settings: use compass data-->
            <!--Create settings (if above check): auto apply as fwd az-->
            <!--Create settings (if 2 above check, disable 1 above and set 1 above true): auto create SS (data must include az. uses as fwd as only)-->
        </PreferenceScreen>
    </PreferenceScreen>

    <PreferenceScreen
        android:title="Point Settings"
        android:key="pointSetup">

        <PreferenceScreen
            android:title="@string/op_gps"
            android:key="gpsPointSetup">

            <PreferenceCategory
                android:title="Filters">

                <com.usda.fmsc.twotrails.preferences.GpsFixPreference
                    android:title="GPS Fix"
                    android:key="@string/set_GPS_FILTER_FIX"/>

                <com.usda.fmsc.twotrails.preferences.GpsFixTypePreference
                    android:title="Fix Type"
                    android:key="@string/set_GPS_FILTER_FIX_TYPE"/>

                <com.usda.fmsc.twotrails.preferences.DopTypePreference
                    android:title="DOP Type"
                    android:key="@string/set_GPS_FILTER_DOP_TYPE"/>

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="DOP Value"
                    android:key="@string/set_GPS_FILTER_DOP_VALUE"
                    android:defaultValue="20"
                    app:valueInSummary="true"/>
            </PreferenceCategory>

            <!--<PreferenceCategory-->
                <!--android:title="Misc Settings">-->

            <!--</PreferenceCategory>-->
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/op_take5"
            android:key="take5PointSetup">

            <PreferenceCategory
                android:title="Filters">

                <com.usda.fmsc.twotrails.preferences.GpsFixPreference
                    android:title="GPS Fix"
                    android:key="@string/set_TAKE5_FILTER_FIX"/>

                <com.usda.fmsc.twotrails.preferences.GpsFixTypePreference
                    android:title="Fix Type"
                    android:key="@string/set_TAKE5_FILTER_FIX_TYPE"/>

                <com.usda.fmsc.twotrails.preferences.DopTypePreference
                    android:title="DOP Type"
                    android:key="@string/set_TAKE5_FILTER_DOP_TYPE"/>

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="DOP Value"
                    android:key="@string/set_TAKE5_FILTER_DOP_VALUE"
                    android:defaultValue="20"
                    app:valueInSummary="true"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="Notifications">

                <SwitchPreferenceCompat
                    android:title="Ring On Create"
                    android:key="@string/set_TAKE5_RING_ON_CREATE_POINT"/>

                <SwitchPreferenceCompat
                    android:title="Vibrate On Create"
                    android:key="@string/set_TAKE5_VIB_ON_CREATE_POINT"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="Misc Settings">

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="Increment Amount"
                    android:summary="The number to increment PID by in the Take5 tool"
                    android:key="@string/set_TAKE5_INCREMENT"
                    android:defaultValue="5" />

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="Take 5 Amount"
                    android:summary="Amount of Bursts to create a Take5 point"
                    android:key="@string/set_TAKE5_NMEA_AMOUNT"
                    android:enabled="false"/>

                <SwitchPreferenceCompat
                    android:title="Ignore First Bursts"
                    android:summary="Ignore the first X bursts when creating a Take5 point"
                    android:key="@string/set_TAKE5_IGNORE_NMEA"
                    android:enabled="false"/>

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="Ignore Furst Bursts Amount"
                    android:summary="Amount of bursts to ignore when creating a Take5 point"
                    android:key="@string/set_TAKE5_IGNORE_NMEA_AMOUNT"
                    android:defaultValue="2"
                    android:enabled="false"/>

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="NMEA Fail Amount"
                    android:summary="Amount of failed bursts to wait until canceling a Take5 point"
                    android:key="@string/set_TAKE5_FAIL_AMOUNT"
                    android:defaultValue="10"
                    android:enabled="false"/>
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/op_walk"
            android:key="walkPointSetup">

            <PreferenceCategory
                android:title="Filters">

                <com.usda.fmsc.twotrails.preferences.GpsFixPreference
                    android:title="GPS Fix"
                    android:key="@string/set_WALK_FILTER_FIX"/>

                <com.usda.fmsc.twotrails.preferences.GpsFixTypePreference
                    android:title="Fix Type"
                    android:key="@string/set_WALK_FILTER_FIX_TYPE"/>

                <com.usda.fmsc.twotrails.preferences.DopTypePreference
                    android:title="DOP Type"
                    android:key="@string/set_WALK_FILTER_DOP_TYPE"/>

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="DOP Value"
                    android:key="@string/set_WALK_FILTER_DOP_VALUE"
                    android:defaultValue="20"
                    app:valueInSummary="true"/>

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="Accuracy"
                    android:summary="Distance between points (Meters)"
                    android:key="@string/set_WALK_FILTER_ACCURACY"/>

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="Frequency"
                    android:summary="Frequency between points (Seconds)"
                    android:key="@string/set_WALK_FILTER_FREQUENCY"
                    app:maximumValue="60"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="Notifications">

                <SwitchPreferenceCompat
                    android:title="Ring On Create"
                    android:key="@string/set_WALK_RING_ON_CREATE_POINT"/>

                <SwitchPreferenceCompat
                    android:title="Vibrate On Create"
                    android:key="@string/set_WALK_VIB_ON_CREATE_POINT"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="Misc Settings">

                <com.usda.fmsc.android.preferences.NumberPickerPreference
                    android:title="Increment Amount"
                    android:key="@string/set_WALK_INCREMENT"
                    android:defaultValue="2"
                    app:valueInSummary="true" />

                <SwitchPreferenceCompat
                    android:title="OnBoundary"
                    android:key="@string/set_AUTO_UPDATE_WALK_ONBND_ASK"
                    android:summary="Remember walk OnBoundary selection option"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceScreen>

    <PreferenceScreen
        android:title="Map Settings"
        android:key="mapSetup">

        <PreferenceCategory
            android:title="Map Options">

            <SwitchPreferenceCompat
                android:title="Show My Position"
                android:key="@string/set_MAP_SHOW_MY_POS"/>

            <SwitchPreferenceCompat
                android:title="Use UTM Navigation"
                android:key="@string/set_MAP_USE_UTM_NAV"/>

            <com.usda.fmsc.twotrails.preferences.MapTrackingPreference
                android:title="Map Tracking"
                android:key="@string/set_MAP_TRACKING_OPTION"
                android:summary="Use UTM instead of Lat/Lon for Navigation"/>

            <SwitchPreferenceCompat
                android:title="Show Compass"
                android:key="@string/set_MAP_COMPASS_ENABLED" />

            <SwitchPreferenceCompat
                android:title="Show My Position Button"
                android:key="@string/set_MAP_MY_POS_BUTTON" />

            <!--<CheckBoxPreference-->
            <!--android:title="Show Zoom Buttons"-->
            <!--android:key="@string/set_MAP_ZOOM_BUTTONS" />-->
        </PreferenceCategory>
    </PreferenceScreen>


    <!--<PreferenceScreen-->
    <!--android:title="Dialog Options"-->
    <!--android:key="dialogSetup">-->

    <!--<PreferenceCategory-->
    <!--android:title="Dialog Options">-->

    <!--<SwitchPreferenceCompat-->
    <!--android:title="OnBoundary"-->
    <!--android:key="@string/set_AUTO_UPDATE_WALK_ONBND_ASK"-->
    <!--android:summary="Remember walk OnBoundary selection option"/>-->

    <!--<SwitchPreferenceCompat-->
    <!--android:title="Update Metadata on GPS"-->
    <!--android:key="@string/set_AUTO_SET_GPS_NAME_TO_META_ASK"-->
    <!--android:summary="Remember to update metadata on GPS receiver change"/>-->

    <!--<SwitchPreferenceCompat-->
    <!--android:title="Overwrite PlotGrid"-->
    <!--android:key="@string/set_AUTO_OVERWRITE_PLOTGRID_ASK"-->
    <!--android:summary="Remember to overwrite the PlotGrid on regenerate"/>-->
    <!--</PreferenceCategory>-->
    <!--</PreferenceScreen>-->

    <PreferenceScreen
        android:title="Misc Settings"
        android:key="miscSetup">

        <SwitchPreferenceCompat
            android:title="Open last project on start"
            android:key="@string/set_AUTO_OPEN_LAST_PROJECT"/>

        <SwitchPreferenceCompat
            android:key="@string/set_DROP"
            android:title="Drop Zeros"
            android:summary="Drop Empty Points" />

        <Preference
            android:title="Export Report"
            android:key="@string/set_EXPORT_REPORT"/>

        <Preference
            android:title="Clear Log"
            android:key="@string/set_CLEAR_LOG"/>

        <Preference
            android:title="Reset Device Settings"
            android:key="@string/set_RESET" />

        <Preference
            android:title="Enter Code"
            android:key="@string/set_CODE" />
    </PreferenceScreen>
</PreferenceScreen>