<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Misc Settings">

    <com.usda.fmsc.android.preferences.SwitchCompatPreference
        android:title="Open last project on start"
        android:key="@string/set_AUTO_OPEN_LAST_PROJECT"/>

    <com.usda.fmsc.android.preferences.SwitchCompatPreference
        android:key="@string/set_DROP"
        android:title="Drop Zeros"
        android:summary="Drop Empty Points" />

    <Preference
        android:title="Export Report"
        android:key="@string/set_EXPORT_REPORT"/>

    <Preference
        android:title="Clear Log"
        android:key="@string/set_CLEAR_LOG"/>

    <Preference
        android:title="Reset Device Settings"
        android:key="@string/set_RESET" />

    <Preference
        android:title="Enter Code"
        android:key="@string/set_CODE" />
</PreferenceScreen>