<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/amdMenuRename"
        android:title="@string/str_rename"
        android:icon="@drawable/ic_edit_black_36dp"/>

    <item android:id="@+id/amdMenuUpdatePath"
          android:title="@string/amd_update_path"
        android:icon="@drawable/ic_attach_file_black_36dp"/>

    <item android:id="@+id/amdMenuUpdateDetails"
          android:title="@string/amd_update_details"
        android:icon="@drawable/ic_renew_black_36dp"/>

    <item android:id="@+id/amdMenuReset"
          android:title="@string/str_reset"
        android:icon="@drawable/ic_refresh_black_36dp"/>

    <item android:id="@+id/amdMenuDelete"
          android:title="@string/str_delete"
        android:icon="@drawable/ic_delete_black_36dp"/>
</menu>